# ipupdate

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  test.yml
src/: config.rs  dyndns.rs  ipaddrs.rs  ipsource.rs  main.rs
src/ipsource/: domain.rs  icanhazip.rs  interface.rs
