[package]
name = "ipupdate"
version = "0.3.0"
authors = ["jvytee <jvytee@posteo.org"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22"
env_logger = "0.11"
getopts = "0.2"
log = { version = "0.4", features = ["kv_unstable"] }
pnet = "0.35"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
